<resources>
    <string name="app_name">Instant news</string>
    <string name="for_you">For you</string>
    <string name="headlines">Headlines</string>
    <string name="following">Following</string>
    <string name="newsstand">Newsstand</string>
    <string name="demo_headline">Indian Army dismisses reports claiming detention of its soldiers by Chinese forces. Indian Army dismisses reports claiming detention of its soldiers by Chinese forces.  </string>
    <string name="_48_minutes_ago">48 minutes ago</string>
    <string name="search">Search</string>
    <string name="submit">submit</string>
    <string name="the_times_of_india">The Times Of India</string>
    <string name="hellow_android">Hellow Android</string>
    <string name="drawer_menu">Drawer Menu</string>
    <string name="hello_android">hello</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="instant_mews">Instant Mews</string>
    <string name="business">Business</string>
    <string name="technology">Technology</string>
    <string name="entertainment">Entertainment</string>
    <string name="sports">Sports</string>
    <string name="science">Science</string>
    <string name="health">Health</string>
</resources>
